# ScholarSense

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
bash/: create_dirs.sh  embed.sh  index.sh  prepare_df.sh  qdrant.sh  scrap.sh  streamlit.sh
configs/: configs.yaml
notebooks/: arxiv_scraping.ipynb  eda.ipynb
scripts/: app.py  create_index.py  embed.py  index.py  index_qdrant.py  prepare_df.py  run_scraping.py
src/scholar_sense/: main.py  utils.py
src/scholar_sense/apps/: app.py  basic_app.py  constants.py  docarray_app.py  utils.py  vectordb_app.py
src/scholar_sense/data/: __init__.py  enums.py  indexing.py  schemas.py  scraping.py
src/scholar_sense/nn/: __init__.py  models.py
src/scholar_sense/viz/: utils.py
